force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Ass_Clust__c.field-meta.xml
<CustomField>
    <fullName>Ass_Clust__c</fullName>
    <label>Ass Clust</label>
    <length>6</length>
    <type>Text</type>
</CustomField>