force-app/main/default/objects/Orga_BU_List_Detail__c/fields/BU_Format__c.field-meta.xml
<CustomField>
    <fullName>BU_Format__c</fullName>
    <formula>Entity_List__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU Format</label>
    <type>Text</type>
</CustomField>