force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Entity linked to the list</description>
    <label>Entity</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <filterItems>
            <field>Orga_BU__c.Business_Unit_Type__c</field>
            <operation>equals</operation>
            <value>List</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Business_Unit_Type__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Business_Unit_Type__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Business_Unit_Type__c</field>
            <operation>equals</operation>
            <value>Format</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Business_Unit_Type__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Assortment Cluster</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>List detail (Entity)</relationshipLabel>
    <relationshipName>List_detail1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>