force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Entity_List__c.field-meta.xml
<CustomField>
    <fullName>Entity_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Linked Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Entity_List__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.Set_BU_List_Entity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>List Parent</relationshipLabel>
    <relationshipName>List_parent</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>