force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>10</length>
    <type>Text</type>
</CustomField>