force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Linked_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Linked_Entity_Code__c</fullName>
    <formula>Entity_List__r.BU_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Entity Code</label>
    <type>Text</type>
</CustomField>