force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Linked_Entity_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Linked_Entity_Long_Name__c</fullName>
    <formula>Entity_List__r.Long_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Entity Long Name</label>
    <type>Text</type>
</CustomField>