force-app/main/default/objects/Orga_BU_List_Detail__c/fields/SellOut_Fact__c.field-meta.xml
<CustomField>
    <fullName>SellOut_Fact__c</fullName>
    <label>Sell Out Fact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>