force-app/main/default/objects/Orga_BU_List_Detail__c/fields/Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Date__c</fullName>
    <description>Last date for Support intervention on the row.</description>
    <inlineHelpText>Last date for Support intervention on the row.</inlineHelpText>
    <label>Last Support Date</label>
    <type>DateTime</type>
</CustomField>