force-app/main/default/objects/Orga_BU_List_Detail__c/fields/T_ass_cluster__c.field-meta.xml
<CustomField>
    <fullName>T_ass_cluster__c</fullName>
    <formula>Text(Entity_List__r.Assortment_Strat__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T_ass_cluster</label>
    <type>Text</type>
</CustomField>