force-app/main/default/objects/Orga_BU_List_Detail__c/recordTypes/Assortment_BU_link.recordType-meta.xml
<RecordType>
    <fullName>Assortment_BU_link</fullName>
    <active>true</active>
    <label>Assortment BU link</label>
</RecordType>