force-app/main/default/objects/Orga_BU_List_Detail__c/recordTypes/Nego_BU_Link.recordType-meta.xml
<RecordType>
    <fullName>Nego_BU_Link</fullName>
    <active>true</active>
    <label>Nego BU Link</label>
</RecordType>