force-app/main/default/objects/Orga_BU_List_Detail__c/recordTypes/Store_KPI.recordType-meta.xml
<RecordType>
    <fullName>Store_KPI</fullName>
    <active>true</active>
    <label>Store KPI</label>
</RecordType>